# udemy-ffmpeg-study

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  vcpkg.json
FFMPEG-Books/: CMakeLists.txt
FFMPEG-Books/FFMPEG-Library-Codec-and-Image-Transform/: CMakeLists.txt
FFMPEG-Books/FFMPEG-Library-Codec-and-Image-Transform/01-scanning/: CMakeLists.txt  main.c
FFMPEG-Books/FFMPEG-Library-Codec-and-Image-Transform/02-demuxing/: CMakeLists.txt  main.c
FFMPEG-Books/FFMPEG-Library-Codec-and-Image-Transform/03-remuxing/: CMakeLists.txt  main.c
FFMPEG-Books/FFMPEG-Library-Codec-and-Image-Transform/04-decoding/: CMakeLists.txt  main.c
chapter01/: CMakeLists.txt
chapter01/01_compile-ffmpeg/: CMakeLists.txt  Makefile  main.c
chapter01/02_load-resource-ffmpeg/: CMakeLists.txt  Makefile  main.c
chapter01/03_dump-format-ffmpeg/: CMakeLists.txt  Makefile  REAME.md  main.c
chapter01/04_AvDictionaryStruct-ffmpeg/: CMakeLists.txt  Makefile  main.c
chapter01/05_TimeBase-AV-Time/: CMakeLists.txt  Makefile  main.c
chapter01/06_function-macro-avDictionaryStruct/: CMakeLists.txt  Makefile  main.c
chapter01/07_video-stream/: CMakeLists.txt  Makefile  main.c
chapter02/: CMakeLists.txt
chapter02/01-project-setting/: CMakeLists.txt  Makefile  main.c
chapter02/02-counting-data-streaming-using-AVFormatContext/: CMakeLists.txt  Makefile  main.c
chapter02/03-advanced-FFMPEG-data-structure/: CMakeLists.txt  Makefile  main.c
chapter02/04-allocated-memory-FFMPEG-video-data/: CMakeLists.txt  Makefile  main.c
chapter02/05-find-video-stream/: CMakeLists.txt  Makefile  main.c
chapter02/06-extracting-individual-video-packets/: CMakeLists.txt  Makefile  main.c
chapter02/07-find-audio-stream-and-extracting-audio-packets/: CMakeLists.txt  Makefile  main.c
chapter02/08-freeing-memory-correctly/: CMakeLists.txt  Makefile  main.c
chapter02/09-decoding-a-video-frame/: CMakeLists.txt  Makefile  main.c
chapter02/10-view-grayScale-image-using-FFMPEG/: CMakeLists.txt  Makefile  main.c
chapter02/11-view-color-image-using-FFMPEG/: CMakeLists.txt  Makefile  main.c
chapter02/12-view-color-image-using-FFMPEG-swscale/: CMakeLists.txt  Makefile  main.c
chapter02/13-view-color-image-using-swScale-FFMPEG/: CMakeLists.txt  main.c
chapter02/14-introduction-audio-data/: CMakeLists.txt  Makefile  main.c
chapter02/15-jpeg-support/: CMakeLists.txt  Makefile  main.c
docs/: README.md
docs/chapter01/: 01-compile-ffmpeg-deep-dive.md  01-compile-ffmpeg.md  02-load-resource-deep-dive.md  02-load-resource.md  03-dump-format-deep-dive.md  03-dump-format.md  04-av-dictionary-deep-dive.md  04-av-dictionary.md  05-timebase-av-time-deep-dive.md  05-timebase-av-time.md  06-function-macro-deep-dive.md  06-function-macro.md  07-video-stream-deep-dive.md  07-video-stream.md  README.md
docs/chapter02/: 01-project-setting-deep-dive.md  01-project-setting.md  02-counting-data-stream-deep-dive.md  02-counting-data-stream.md  03-advanced-data-structure-deep-dive.md  03-advanced-data-structure.md  04-allocated-memory-deep-dive.md  04-allocated-memory.md  05-find-video-stream-deep-dive.md  05-find-video-stream.md  06-extracting-video-packets-deep-dive.md  06-extracting-video-packets.md  07-find-audio-stream-deep-dive.md  07-find-audio-stream.md  08-freeing-memory-deep-dive.md  08-freeing-memory.md  09-decoding-video-frame-deep-dive.md  09-decoding-video-frame.md  10-grayscale-image-deep-dive.md  10-grayscale-image.md  11-color-image-deep-dive.md  11-color-image.md  12-swscale-setting-deep-dive.md  12-swscale-setting.md  13-color-image-swscale-deep-dive.md  13-color-image-swscale.md  14-audio-data-deep-dive.md  14-audio-data.md  15-jpeg-support-deep-dive.md  15-jpeg-support.md  README.md
docs/ffmpeg-books/: 01-scanning-deep-dive.md  01-scanning.md  02-demuxing-deep-dive.md  02-demuxing.md  03-remuxing-deep-dive.md  03-remuxing.md  04-decoding-deep-dive.md  04-decoding.md  README.md
docs/study-FFMPEG/: 01-open-file-deep-dive.md  01-open-file.md  02-stream-info-deep-dive.md  02-stream-info.md  03-demuxing-packets-deep-dive.md  03-demuxing-packets.md  04-decode-video-deep-dive.md  04-decode-video.md  05-decode-audio-deep-dive.md  05-decode-audio.md  06-scaling-video-deep-dive.md  06-scaling-video.md  07-resampling-audio-deep-dive.md  07-resampling-audio.md  08-encode-video-deep-dive.md  08-encode-video.md  09-encode-audio-deep-dive.md  09-encode-audio.md  10-remuxing-deep-dive.md  10-remuxing.md  11-muxing-deep-dive.md  11-muxing.md  12-transcoding-deep-dive.md  12-transcoding.md  13-filtering-video-deep-dive.md  13-filtering-video.md  14-seeking-deep-dive.md  14-seeking.md  README.md
docs/study-FFMPEG/hw-accel/: 01-list-hw-devices-deep-dive.md  01-list-hw-devices.md  02-hw-decode-deep-dive.md  02-hw-decode.md  03-hw-encode-deep-dive.md  03-hw-encode.md  README.md
resources/GeneratedColorImage/: color.ppm
resources/GeneratedGrayImage/: testPPM.ppm
study-FFMPEG/: CMakeLists.txt
study-FFMPEG/01-open-file/: CMakeLists.txt  main.c
study-FFMPEG/02-stream-info/: CMakeLists.txt  main.c
study-FFMPEG/03-demuxing-packets/: CMakeLists.txt  main.c
study-FFMPEG/04-decode-video/: CMakeLists.txt  main.c
study-FFMPEG/05-decode-audio/: CMakeLists.txt  main.c
study-FFMPEG/06-scaling-video/: CMakeLists.txt  main.c
study-FFMPEG/07-resampling-audio/: CMakeLists.txt  main.c
study-FFMPEG/08-encode-video/: CMakeLists.txt  main.c
study-FFMPEG/09-encode-audio/: CMakeLists.txt  main.c
study-FFMPEG/10-remuxing/: CMakeLists.txt  main.c
study-FFMPEG/11-muxing/: CMakeLists.txt  main.c
study-FFMPEG/12-transcoding/: CMakeLists.txt  main.c
study-FFMPEG/13-filtering-video/: CMakeLists.txt  main.c
study-FFMPEG/14-seeking/: CMakeLists.txt  main.c
study-FFMPEG/hw-accel/: CMakeLists.txt
study-FFMPEG/hw-accel/01-list-hw-devices/: CMakeLists.txt  main.c
study-FFMPEG/hw-accel/02-hw-decode/: CMakeLists.txt  main.c
study-FFMPEG/hw-accel/03-hw-encode/: CMakeLists.txt  main.c
