cmake_minimum_required(VERSION 3.27)

add_subdirectory(01-project-setting)
add_subdirectory(02-counting-data-streaming-using-AVFormatContext)
add_subdirectory(03-advanced-FFMPEG-data-structure)
add_subdirectory(04-allocated-memory-FFMPEG-video-data)
add_subdirectory(05-find-video-stream)
add_subdirectory(06-extracting-individual-video-packets)
add_subdirectory(07-find-audio-stream-and-extracting-audio-packets)
add_subdirectory(08-freeing-memory-correctly)
add_subdirectory(09-decoding-a-video-frame)
add_subdirectory(10-view-grayScale-image-using-FFMPEG)
add_subdirectory(11-view-color-image-using-FFMPEG)
add_subdirectory(12-view-color-image-using-FFMPEG-swscale)
add_subdirectory(13-view-color-image-using-swScale-FFMPEG)